--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "slim/slim": "4.*",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "slim/psr7": "^1.6"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
