--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "slim/slim": "4.*",
         "phpunit/phpunit": "^9.5",
-        "slim/psr7": "^1.6"
+        "slim/psr7": "^1.6",
+        "slim/twig-view": "^3.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
