--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },
+        "files": [
+            "src/connection.php"
+        ]
     },
     "authors": [
         {
