--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,15 @@
         "slim/slim": "4.*",
         "phpunit/phpunit": "^9.5",
         "slim/psr7": "^1.6",
-        "slim/twig-view": "^3.3"
+        "slim/twig-view": "^3.3",
+        "vlucas/valitron": "^1.4",
+        "nesbot/carbon": "^2.63",
+        "slim/flash": "^0.4.0",
+        "php-di/php-di": "^6.4"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/var-dumper": "^6.1"
     },
     "license": "MIT",
     "autoload": {
