--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "nesbot/carbon": "^2.63",
         "slim/flash": "^0.4.0",
         "php-di/php-di": "^6.4",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "imangazaliev/didom": "^2.0",
+        "illuminate/support": "^9.41"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
