--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php-di/php-di": "^6.4",
         "guzzlehttp/guzzle": "^7.0",
         "imangazaliev/didom": "^2.0",
-        "illuminate/support": "^9.41"
+        "illuminate/support": "^9.41",
+        "redant/twig-components": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
