--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         "slim/flash": "^0.4.0",
         "php-di/php-di": "^6.4",
         "guzzlehttp/guzzle": "^7.0",
-        "imangazaliev/didom": "^2.0",
         "illuminate/support": "^9.41",
-        "redant/twig-components": "^1.0"
+        "redant/twig-components": "^1.0",
+        "symfony/dom-crawler": "^6.2",
+        "symfony/css-selector": "^6.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
